# vacdumper

./: CMakeLists.txt  README.md  main.cpp
minhook/: hook.cpp  trampoline.cpp
minhook/hde/: hde32.hpp  hde64.hpp
patternscanner/: scanner.cpp  scanner.hpp
